--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
+body {
+  padding: 0;
+  margin: 0;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #c2c2d6;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+.calculator {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+
+  width: 200px;
+  height: 300px;
+  background-color: black;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.operation {
+  width: 100%;
   color: white;
+  font-weight: 900;
+  letter-spacing: 1px;
 }
 
-.App-link {
-  color: #61dafb;
+input {
+  flex: 1;
+  color: white;
+  font-weight: 900;
+  letter-spacing: 1px;
+  background-color: black;
+  border: none;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.08);
+  transition: all 0.5s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttonsWrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.buttonsWrapper button {
+  width: 50px;
+  height: 50px;
+  color: white;
+  background-color: #303030;
+  padding: 0.8rem;
+  border: 1px solid black;
+  outline: 0;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  transition: 0.3s;
+}
+
+.buttonsWrapper button:hover {
+  border: 1px solid white;
+  font-weight: 800;
+}
+
+.buttonsWrapper button:active {
+  position: relative;
+  top: 1px;
+}
+
+#AC {
+  width: 100px;
+  background-color: #b22222;
+}
+
+#equal {
+  height: 100px;
+  background-color: #4682b4;
+}
+
+#zero {
+  width: 100px;
+  margin-top: -50px;
+}
+
+#dot {
+  margin-top: -50px;
+}
+
+
+.signature {
+  text-align: center;
 }
